      the wrong path so fix this up here too.
    - debian/patches/fhs-filespaths-debatable.patch: updated for some new
      uses of lock_path() which we map to cache_path().
    - debian/patches/fhs-assignpaths.patch: patch source/m4/check_path.m4
      instead of source/configure.in.
  * debian/patches/smbstatus-locking.patch: merged upstream

 -- Christian Perrier <bubulle@debian.org>  Wed, 05 Mar 2008 22:45:28 +0100

samba (3.0.28a-1) unstable; urgency=low

  [ Christian Perrier ]
  * New upstream release. This fixes the following Debian bugs:
    - Prevent nmbd from shutting down when no network
      interfaces can be located. Closes: #433449
  * Debian patches dropped as applied upstream:
    - make-distclean.patch
    - linux-cifs-user-perms.patch
    - cifs-umount-same-user.patch
    - get_global_sam_sid-non-root.patch
    - chgpasswd.patch
    - cups.patch
  * Fix doc-base section from Apps/Net to Network
  * Fix copyright in debian/copyright
  * Updated Standards-Version to 3.7.3 (no changes needed)
  * [Lintian] No longer use -1 revision for the libacl-dev build
    dependency

  [ Steve Langasek ]
  * Merge smb.conf changes from Ubuntu:
    - correct an inconsistency inthe winbind enum comment
    - correct default and example settings to use the canonical names for all
      options, rather than historical synonyms
    - clarify the comment for 'max log size'.
    Thanks to Chuck Short and Richard Laager.
  * Add an additional sed command to samba-common.postinst to cleverly
    pick up any shares that have been appended to the default smb.conf 
    and exclude them from the ucf diff.

 -- Christian Perrier <bubulle@debian.org>  Fri, 14 Mar 2008 21:28:16 +0100

samba (3.0.28-4) unstable; urgency=low
 
  [ Steve Langasek ]
  * Brown paper bag: fix samba-common.files to list all of the smb.conf
    templates, not just the current one.  Closes: #470138.
  * Drop debian/patches/gcc42-arm-workaround.patch, which should have been