@@ -450,7 +450,7 @@ Index: samba-3.2.0pre2/source/pam_smbpass/pam_smb_passwd.c
  
      /*
       * First get the name of a user.  No need to do anything if we can't
-@@ -121,12 +120,12 @@
+@@ -121,16 +120,16 @@
      retval = pam_get_user( pamh, &user, "Username: " );
      if (retval != PAM_SUCCESS) {
          if (on( SMB_DEBUG, ctrl )) {
@@ -465,6 +465,11 @@ Index: samba-3.2.0pre2/source/pam_smbpass/pam_smb_passwd.c
      }
  
      if (geteuid() != 0) {
+-	_log_err( LOG_DEBUG, "Cannot access samba password database, not running as root.");
++	_log_err(pamh, LOG_DEBUG, "Cannot access samba password database, not running as root.");
+ 	return PAM_AUTHINFO_UNAVAIL;
+     }
+ 
 @@ -139,7 +138,7 @@
      oldsig_handler = CatchSignal(SIGPIPE, SIGNAL_CAST SIG_IGN);
  
